<resources>
    <string name="app_name">Grow Plus</string>
    <string name="invalid_device_date">ডিভাইসের বর্তমান তারিখের সময় অবশ্যই শেষ সিঙ্ক করা সার্ভারের তারিখের পরে হতে হবে</string>
    <string name="home_women_label">মহিলা</string>
    <string name="home_field_monitor_label">স্টক</string>
    <string name="child_entries">শিশু</string>
    <string name="child_profile">শিশুরা </string>
    <string name="child_DOB">জন্ম তারিখ</string>
    <string name="register_search_hint">অনুসন্ধান করুন</string>
    <string name="child_title">শিশু</string>
    <string name="child_alphabetical_sort">বর্ণানুক্রমিক (শিশুর নাম)</string>
    <string name="child_id_sort">প্রোগ্রাম আইডি </string>
    <string name="child_search_hint">শিশু খুঁজুন</string>
    <string name="birthdate">DOB</string>
    <string name="age">বয়স</string>
    <string name="uc">UC</string>
    <string name="town">শহর</string>
    <string name="address">ঠিকানা</string>
    <string name="address_format">ঠিকানা : %1$S</string>
    <string name="name_format">নাম : %1$S</string>
    <string name="hhid_format">HHID : %1$S</string>
    <string name="unique_id_format">%1$S</string>
    <string name="epi_number">আইডি</string>
    <string name="marital_status">বৈবাহিক অবস্থা</string>
    <string name="woman_entries"></string>
    <string name="woman_nbnf">এনবিএনএফ</string>
    <string name="woman_register_title">মহিলা নিবন্ধন</string>
    <string name="unique_id">ইউনিক আইডি</string>
    <string name="woman_profile">মহিলা প্রোফাইল</string>
    <string name="woman_contact_number">যোগাযোগ</string>
    <string name="woman_edd">EDD এবং জিএ</string>
    <string name="woman_alphabetical_sort">বর্ণানুক্রমিক (নাম)</string>
    <string name="woman_details_title">মহিলা প্রোফাইল</string>
    <string name="day">দিন\n</string>
    <string name="bcg">বিসিজি\n</string>
    <string name="opv">OPV\n</string>
    <string name="ipv">ওপিভি\n</string>
    <string name="penta">পেন্টা\n</string>
    <string name="measles">মেসেলস\n</string>
    <string name="pcv">পিসিভি\n</string>
    <string name="tt">টিটি\n</string>
    <string name="total">মোট\n</string>
    <string name="used">ব্যবহৃত</string>
    <string name="month_inhand">হাতে ব্যালেন্স</string>
    <string name="stock_register_title">স্টক রেজিস্টার</string>
    <string name="stock_register_daily_view">প্রতিদিন</string>
    <string name="field_title">স্টক রেজিস্টার</string>
    <string name="pick_report">প্রতিবেদন</string>
    <string name="field_details_title">স্টক অবস্থান</string>
    <string name="title_activity_vaccine_report">ভ্যাকসিন রিপোর্ট</string>
    <string name="action_settings">সেটিংস</string>
    <string name="section_format">বিভাগ থেকে হ্যালো ওয়ার্ল্ড: %1$d</string>
    <string name="userNameText">ব্যবহারকারীর নাম</string>
    <string name="passwordText">পাসওয়ার্ড</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="done_today">আজ সম্পন্ন হয়েছে</string>
    <string name="unauthorized">অনুগ্রহ করে শংসাপত্র পরীক্ষা করুন</string>
    <string name="unauthorized_group">আপনার ব্যবহারকারী গোষ্ঠীকে এই ডিভাইসটি অ্যাক্সেস করার অনুমতি নেই</string>
    <string name="unknown_response">লগইন ব্যর্থ হয়েছে৷ পরে চেষ্টা করুন</string>
    <string name="no_internet_connectivity">কোন ইন্টারনেট সংযোগ নেই৷ অনুগ্রহ করে ডেটা সংযোগ নিশ্চিত করুন</string>
    <string name="form_saved_dialog_title">ফর্ম জমা</string>
    <string name="form_saved_success_dialog_message">ফর্ম সফলভাবে সংরক্ষিত হয়েছে!</string>
    <string name="form_saved_failed_dialog_message">ফর্ম সংরক্ষণ একটি ত্রুটির সম্মুখীন হয়েছে৷ </string>
    <string name="child_followup">শিশু অনুসরণ করুন</string>
    <string name="woman_followup">মহিলা অনুসরণ করুন</string>
    <string name="edit">সম্পাদনা করুন</string>
    <string name="save">সংরক্ষণ করুন</string>
    <string name="search">অনুসন্ধান করুন</string>
    <string name="cancel">বাতিল করুন</string>
    <string name="global_search_hint">বিশ্বব্যাপী অনুসন্ধান করুন</string>
    <string name="navigation_drawer_open">নেভিগেশন ড্রয়ার খুলুন</string>
    <string name="navigation_drawer_close">নেভিগেশন ড্রয়ার বন্ধ করুন</string>
    <string name="child_siblings">%s ভাইবোন</string>
    <string name="neutral_sex_id">তার</string>
    <string name="female_sex_id">তার</string>
    <string name="male_sex_id">তার</string>
    <string name="label_immunization_records">কাউন্সেলিং &amp; পরিষেবাগুলি</string>
    <string name="scan_qr_code">QR কোড স্ক্যান করুন</string>
    <string name="record_due_">রেকর্ড %1$s - বাকি %2$s</string>
    <string name="mr_due_">%1$s - বকেয়া %2$s</string>
    <string name="due_">%1$s: বকেয়া %2$s</string>
    <string name="today">আজ</string>
    <string name="select_location">অবস্থান নির্বাচন করুন</string>
    <string name="no_openmrs_id">কোন অনন্য আইডি পাওয়া যায়নি৷ আরও পেতে সিঙ্ক বোতামে ক্লিক করুন এবং যদি এই ত্রুটিটি অব্যাহত থাকে তবে সিস্টেম প্রশাসকের সাথে যোগাযোগ করুন৷</string>
    <string name="edit_registration_data">নিবন্ধন ডেটা সম্পাদনা করুন</string>
    <string name="edit_weight_data">ওজন ডেটা সম্পাদনা করুন</string>
    <string name="edit_immunization_data">ইমিউনাইজেশন ডেটা সম্পাদনা করুন</string>
    <string name="edit_recurring_services_data">পুনরাবৃত্ত পরিষেবার ডেটা সম্পাদনা করুন</string>
    <string name="mark_active">সক্রিয় চিহ্নিত করুন</string>
    <string name="syncing">সিঙ্ক হচ্ছে...</string>
    <string name="sync_failed">সিঙ্ক ব্যর্থ হয়েছে</string>
    <string name="sync_complete">সিঙ্ক সম্পূর্ণ</string>
    <string name="sync_">সিঙ্ক%1$s</string>
    <string name="last_sync">(শেষ %1$s)</string>
    <string name="now">এখন</string>
    <string name="ic_zone">&#xe052;</string>
    <string name="service_location">পরিষেবার অবস্থান</string>
    <string name="ic_check">&#xe038;</string>
    <string name="no_record">কোন রেকর্ড (গুলি) পাওয়া যায়নি!</string>
    <string name="overdue_due">অবলুপ্ত/বকেয়া (%1$s)</string>
    <string name="record_weight_with_nl">ওজন রেকর্ড\nকরুন</string>
    <string name="record_weight">ওজন রেকর্ড করুন</string>
    <string name="record_height">উচ্চতা রেকর্ড করুন</string>
    <string name="record_muac">MUAC রেকর্ড করুন</string>
    <string name="updating_dialog_title">আপডেট হচ্ছে…</string>
    <string name="please_wait_message">অনুগ্রহ করে অপেক্ষা করুন</string>
    <string name="saving_dialog_message">অনুগ্রহ করে অপেক্ষা করুন</string>
    <string name="advanced_search">উন্নত অনুসন্ধান</string>
    <string name="out_and_inside">বাইরে এবং ভিতরে\nআমার ক্যাচমেন্ট এলাকা</string>
    <string name="requires_internet_connection">(ইন্টারনেট সংযোগ প্রয়োজন)</string>
    <string name="my_catchment_area">শুধুমাত্র আমার ক্যাচমেন্ট এলাকা</string>
    <string name="search_limits">অনুসন্ধানের সীমা</string>
    <string name="client_status">ক্লায়েন্ট স্থিতি</string>
    <string name="active">সক্রিয়</string>
    <string name="inactive">নিষ্ক্রিয়</string>
    <string name="lost_to_follow_up">ফলো-আপ করতে হারিয়ে</string>
    <string name="first_name">প্রথম নাম</string>
    <string name="first_name_hint">প্রথম নাম</string>
    <string name="last_name">শেষ নাম</string>
    <string name="last_name_hint">শেষ নাম</string>
    <string name="mother_guardian_name">মা/অভিভাবকের নাম</string>
    <string name="mother_guardian_name_hint">মা বা অভিভাবকের নাম</string>
    <string name="mother_guardian_nrc">মা/অভিভাবক NRC</string>
    <string name="mother_guardian_nrc_hint">মা বা অভিভাবক NRC নম্বর</string>
    <string name="mother_guardian_phone_number">মা/অভিভাবকের ফোন নম্বর</string>
    <string name="mother_guardian_phone_number_hint">মা বা অভিভাবকের ফোন নম্বর</string>
    <string name="date_birth_range">জন্ম তারিখের ব্যাপ্তি</string>
    <string name="end_date_hint">শেষ তারিখ নির্বাচন করুন</string>
    <string name="record_weight_notification">"শিশুর ওজন রেকর্ড করতে ভুলবেন না"</string>
    <string name="update_search_params">অনুগ্রহ করে অন্তত একটি সার্চ প্যারামিটার আপডেট করুন</string>
    <string name="no_vaccine_record_found">কোন টিকা দেওয়ার রেকর্ড পাওয়া যায়নি</string>
    <string name="matching_results">%1$s মিলে যাওয়া ফলাফল পাওয়া গেছে</string>
    <string name="check_child_bcg_scar">"শিশুর বিসিজি দাগ পরীক্ষা করুন"</string>
    <string name="move_to_catchment_confirm_dialog_message">আপনি কি এই রেকর্ডটিকে আপনার ক্যাচমেন্ট এলাকায় সরানোর বিষয়ে নিশ্চিত?</string>
    <string name="dismiss">বাতিল</string>
    <string name="change_status">স্ট্যাটাস পরিবর্তন করুন</string>
    <string name="recurring_services">পুনরাবৃত্ত পরিষেবাগুলি</string>
    <string name="itn_given">সন্তানকে কি একটি ITN দেওয়া হয়েছে?</string>
    <string name="itn_under_net">শিশুটি কি জালের নিচে ঘুমাচ্ছে?</string>
    <string name="yes">হ্যাঁ</string>
    <string name="no">না</string>
    <string name="undo_service">পরিষেবা পূর্বাবস্থায় ফেরান?</string>
    <string name="yes_undo_service">হ্যাঁ, পরিষেবা পূর্বাবস্থায় ফেরান</string>
    <string name="cannot_record_vaccine">%1$s রেকর্ড করা যাবে না</string>
    <string name="device_timezone_changed">"ডিভাইসের টাইমজোন পরিবর্তিত হয়েছে। অনুগ্রহ করে আবার লগইন করুন।"</string>
    <string name="device_time_changed">"ডিভাইসের সময় পরিবর্তিত হয়েছে। অনুগ্রহ করে আবার লগইন করুন।"</string>
    <string name="immunizations">ইমিউনাইজেশন</string>
    <string name="recurring">পুনরাবৃত্ত পরিষেবাগুলি</string>
    <string name="months">মাস</string>
    <string name="kg">কেজি</string>
    <string name="boys">ছেলেরা</string>
    <string name="weight_for_age">ওজন-বয়স</string>
    <string name="previous_weights">পূর্বের ওজন</string>
    <string name="previous_height">পূর্বের উচ্চতা</string>
    <string name="height">উচ্চতা</string>
    <string name="previous_muac">পূর্বের MUAC</string>
    <string name="side_nav_hia2">HIA 2 রিপোর্ট</string>
    <string name="hia2_daily_tallies">দৈনিক ট্যালি</string>
    <string name="hia2_draft_monthly_with_count">খসড়া মাসিক (%1$d)</string>
    <string name="hia2_sent_monthly">প্রেরিত মাসিক</string>
    <string name="title_activity_hia2_report">HIA2 রিপোর্ট</string>
    <string name="start_new_report">নতুন প্রতিবেদন শুরু করুন</string>
    <string name="no_draft_reports">কোন খসড়া রিপোর্ট নেই</string>
    <string name="no_monthly_ready">কোন মাসিক HIA2 রিপোর্ট সম্পূর্ণ হওয়ার জন্য প্রস্তুত নেই৷</string>
    <string name="reports_available">প্রতিবেদন উপলব্ধ</string>
    <string name="sent_reports_">প্রতিবেদন পাঠানো হয়েছে > %1$s</string>
    <string name="submitted_by_">%2$s দ্বারা %1$s জমা দেওয়া হয়েছে</string>
    <string name="sent_by">%2$s দ্বারা %1$s পাঠানো হয়েছে</string>
    <string name="daily_tally_">দৈনিক ট্যালি > %1$s</string>
    <string name="sync_failed_no_internet">সিঙ্ক ব্যর্থ হয়েছে৷ আপনার ইন্টারনেট সংযোগ পরীক্ষা করুন৷</string>
    <string name="loading">লোড হচ্ছে</string>
    <string name="drawer_open">ড্রয়ার খোলা</string>
    <string name="drawer_close">ড্রয়ার বন্ধ করুন</string>
    <string name="started">শুরু হয়েছে</string>
    <string name="searching_dialog_title">অনুসন্ধান করা হচ্ছে...</string>
    <string name="searching_dialog_message">অনুগ্রহ করে অপেক্ষা করুন</string>
    <string name="move_to_catchment_dialog_title">সরানো হচ্ছে...</string>
    <string name="move_to_catchment_dialog_message">অনুগ্রহ করে অপেক্ষা করুন</string>
    <string name="send_report_warning">রিপোর্ট পাঠাবেন?\n\tতারিখ: %1$s\n\tব্যবহারকারী: %2$s</string>
    <string name="send">পাঠান</string>
    <string name="n_a">"N/A"</string>
    <string name="confirm_button_label">নিশ্চিত করুন</string>
    <string name="title_activity_householddetail">HouseholddetailActivity</string>
    <string name="record_bcg_2">বিসিজি 2 রেকর্ড করুন (যদি কোন দাগ না থাকে)</string>
    <string name="login_user_name_hint">নাম প্রবেশ করান</string>
    <string name="login_password_hint">পাসওয়ার্ড প্রবেশ করান</string>
    <string name="login_please">লগইন করুন</string>
    <string name="profile_household">প্রোফাইল</string>
    <string name="member_household">সদস্য</string>
    <string name="last_visit_household">শেষ ভিজিট</string>
    <string name="add_household">যোগ</string>
</resources>