<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/language_switch"
        android:title=""
        app:showAsAction="always"
        app:actionLayout="@layout/language_switch_lay"
        />


    <item
        android:id="@+id/change_status"
        android:orderInCategory="100"
        android:title="@string/change_status"
        app:showAsAction="never" />
    <item
        android:id="@+id/registration_data"
        android:orderInCategory="100"
        android:title="@string/edit_registration_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/weight_data"
        android:orderInCategory="100"
        android:title="@string/edit_weight_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/immunization_data"
        android:orderInCategory="100"
        android:title="@string/edit_immunization_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/recurring_services_data"
        android:orderInCategory="100"
        android:title="@string/edit_recurring_services_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/record_bcg_2"
        android:orderInCategory="100"
        android:title="@string/record_bcg_2"
        app:showAsAction="never" />


</menu>