<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/client_list_header_dark_grey"
    android:orientation="horizontal"
    android:weightSum="10">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="1dp"
        android:layout_weight="4.2"
        android:orientation="horizontal">

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/child_header"
            style="@style/CustomFontTextViewStyle.ClientList.Medium"
            android:layout_width="53dp"
            android:layout_height="match_parent"
            android:text="@string/profile_household"
            android:textAllCaps="true"
            android:textColor="@color/client_list_grey"
            android:textSize="14sp" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="1dp"
        android:layout_weight="2.2">

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/child_zeir_id_header"
            style="@style/CustomFontTextViewStyle.ClientList.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/member_household"
            android:textAllCaps="true"
            android:textColor="@color/client_list_grey"
            android:textSize="14sp" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="1dp"
        android:layout_weight="2.2">

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/child_weight_header"
            style="@style/CustomFontTextViewStyle.ClientList.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_visit_household"
            android:textAllCaps="true"
            android:textColor="@color/client_list_grey"
            android:textSize="14sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="1dp"
        android:layout_weight="1.5">

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/add_member"
            style="@style/CustomFontTextViewStyle.ClientList.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_household"
            android:textAllCaps="true"
            android:textColor="@color/client_list_grey"
            android:textSize="14sp"
            android:layout_weight="1.4" />

    </LinearLayout>
</LinearLayout>
