<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/canvasSV"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/canvasRL"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:layout_alignParentLeft="true"
                android:visibility="invisible"
                android:layout_gravity="left"
                android:src="@drawable/up_logo" />
<!--            <ImageView-->
<!--                android:layout_width="80dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:scaleType="centerInside">-->

<!--            </ImageView>-->

            <ImageView
                android:visibility="invisible"
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginRight="30dp"
                android:src="@drawable/ic_logo_mpower" />

        </RelativeLayout>



        <!-- Most important group of views goes in last to avoid being overlapped by other less important views -->

        <!-- Bottom section -->
        <LinearLayout
            android:id="@+id/logoCanvasLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/credentialsCanvasLL"
            android:layout_alignParentBottom="false"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/login_logo_height"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:scaleType="centerInside"
                android:src="@drawable/login_screen_women_icon" />

            <TextView
                android:id="@+id/login_build"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:textColor="#9BBCC6" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/credentialsCanvasLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/poweredbyholder"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:paddingLeft="@dimen/login_horizontal_margin"
            android:paddingRight="@dimen/login_horizontal_margin">

            <EditText
                android:id="@+id/login_userNameText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="8"
                android:background="@drawable/rounded_corner_edittext_growplus"
                android:ems="10"
                android:hint="@string/login_user_name_hint"
                android:inputType="textNoSuggestions|textFilter|textVisiblePassword"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textColor="#666666"
                android:textColorHint="#bfbfbf"
                android:typeface="sans" />

            <EditText
                android:id="@+id/login_passwordText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="8"
                android:background="@drawable/rounded_corner_edittext_growplus"
                android:ems="10"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"

                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textColor="#666666"
                android:textColorHint="#bfbfbf"
                android:typeface="sans" />

            <Button
                android:id="@+id/login_loginButton"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="right|top"
                android:layout_marginTop="20dp"
                android:layout_weight="8"
                android:background="@drawable/login_blue"
                android:ems="10"
                android:onClick="login"
                android:shadowColor="#ffffff"
                android:shadowDx="0"
                android:shadowDy="1"
                android:shadowRadius="0.5"
                android:text="@string/login_please"
                android:textColor="#666666"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/poweredbyholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Powered by"
                android:textColor="#9BBCC6" />

            <ImageView
                android:layout_width="@dimen/login_opensrp_logo_width"
                android:layout_height="@dimen/login_opensrp_logo_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_opensrp_logo" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/bottom_layout"
            android:padding="10dp"
            android:orientation="horizontal"
            android:gravity="bottom|center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_logo_mpower"/>
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_logo_tus"/>
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_logo_up"/>
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:src="@drawable/ic_logo_giz"/>
        </LinearLayout>



        <!-- Top section -->

        <!-- Middle section -->
    </LinearLayout>
</ScrollView>